# rust_diesel_auth0

./: .gitignore  Cargo.toml  README.md  env-example
migrations/2020-09-02-144332_add_users/: up.sql
migrations/2020-09-11-082718_add_column_to_users/: down.sql  up.sql
src/: auth.rs  error.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
src/extractor/: error_handler.rs
src/handler/: auth_handler.rs  error_handler.rs  mod.rs  user_handler.rs
src/model/: auth_model.rs  user_model.rs
src/models/: response.rs
src/rim/: error.rs  response.rs
src/route/: auth_route.rs  user_route.rs
