[package]
name = "rust_diesel_auth"
version = "0.1.0"
authors = ["wangxiao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-httpauth = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
diesel = { version = "1.4.5", features = ["mysql","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.7"
r2d2 = "0.8.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.10.8"
actix-rt = "1.1.1"
log = "0.4.11"
env_logger = "0.8.1"
jsonwebtoken = "7.2.0"
rand = "0.7.3"
