[package]
name = "actixx"
version = "0.1.0"
authors = ["wangxiao <wx497657341@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0-beta.1", features = ["mysql", "chrono"] }
async-std = { version = "1.6", features = ["attributes"] }
dotenv = "0.15.0"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4.19", features = ["serde"] }
